Closed Bug 1672925 Opened 4 years ago Closed 4 years ago

Crash in [@ gfxFontUtils::ReadNames]

Categories

(Core :: Layout: Text and Fonts, defect)

x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- wontfix
firefox82 --- wontfix
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: aryx, Assigned: jfkthame)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Windows 7 x86 crashes which started/got more frequent with 83.0b2 (6 installations affected for 83.0b2, 3 so far for 83.0b3 which got released a few hours ago) - no crashes for the 82 branch.

Crash report: https://crash-stats.mozilla.org/report/index/e6054cfe-4e02-4528-aa72-7afb20201023

Reason: EXCEPTION_IN_PAGE_ERROR_READ / STATUS_DEVICE_DATA_ERROR

Top 10 frames of crashing thread:

0 xul.dll static gfxFontUtils::ReadNames gfx/thebes/gfxFontUtils.cpp:1459
1 xul.dll static gfxFontUtils::ReadCanonicalName gfx/thebes/gfxFontUtils.cpp:1225
2 xul.dll gfxDWriteFontList::GetFacesInitDataForFamily const gfx/thebes/gfxDWriteFontList.cpp:1196
3 xul.dll gfxPlatformFontList::InitializeFamily gfx/thebes/gfxPlatformFontList.cpp:1355
4 xul.dll gfxDWriteFontList::ReadFaceNamesForFamily gfx/thebes/gfxDWriteFontList.cpp:1298
5 xul.dll gfxPlatformFontList::InitOtherFamilyNamesInternal gfx/thebes/gfxPlatformFontList.cpp:2408
6 xul.dll gfxPlatformFontList::InitOtherFamilyNames gfx/thebes/gfxPlatformFontList.cpp:2581
7 xul.dll mozilla::dom::ContentParent::RecvInitOtherFamilyNames dom/ipc/ContentParent.cpp:5430
8 xul.dll mozilla::dom::PContentParent::OnMessageReceived ipc/ipdl/PContentParent.cpp:15581
9 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2070

The crashes here look like disk i/o errors trying to read a font file. If the user's hardware is giving errors there may not be much we can do; maybe we can trap the exception and fail more gracefully, though, in the hope that it's just an individual file that's affected and everything else can continue to work.

Severity: -- → S3

did anything change in regards to font handling in firefox 83? the crash signature at https://crash-stats.mozilla.org/signature/?product=Firefox&signature=`anonymous%20namespace%27%3A%3ATrueTypeFontMetricsBuilder%3A%3AGetBlackBox shows a similar pattern and is also spiking up in this version.

Possibly from bug 1667834 so it should disappear from beta next week.

If there's a device error trying to read some of the data from a font, it's better to catch the exception
and leave that individual font unusable (without names or character map) than to crash the whole process.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/96e145a30221
Catch possible exceptions when trying to access font tables loaded through DWrite. r=lsalzman
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jfkthame)

This will be preffed-off by default in late Beta and Release builds, so probably not important to uplift.

Flags: needinfo?(jfkthame)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: