Bug 1672925 - Catch possible exceptions when trying to access font tables loaded through DWrite. r=lsalzman

If there's a device error trying to read some of the data from a font, it's better to catch the exception
and leave that individual font unusable (without names or character map) than to crash the whole process.

Differential Revision: https://phabricator.services.mozilla.com/D95146